--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .page {
+        @apply flex flex-col justify-start pt-10 items-center pb-10 h-screen bg-lilac;
+    }
+}
